# dynite

./: README.md  Taskfile.yaml  pyproject.toml
src/dynite/: __init__.py  client.py  exceptions.py
tests/: conftest.py  test_client.py  test_client_build_url.py  test_client_get.py  test_client_get_record_count.py  test_client_get_records.py  test_client_initialization.py  test_client_next_page_link.py  test_exceptions.py
tests/client/: test_initialization.py  test_methods.py
